--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-Commit 1
-
-"G.211.20.0067 - Aji Lukmantoro" 
+"G.211.20.0067 - Aji Lukmantoro - Kota Semarang" 
+stash@{0}: WIP on Pr5-0067-AL: 4274658 Merge Branch
